// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`city link renders correctly  if link is active 1`] = `
<li
  className="locations__item"
>
  <button
    className="locations__item-link tabs__item tabs__item--active"
    onClick={[Function]}
    type="button"
  >
    <span>
      Amsterdam
    </span>
  </button>
</li>
`;

exports[`city link renders correctly  if link isn't active 1`] = `
<li
  className="locations__item"
>
  <button
    className="locations__item-link tabs__item "
    onClick={[Function]}
    type="button"
  >
    <span>
      Amsterdam
    </span>
  </button>
</li>
`;
